--- a/Downloads/random-advice-bot/.github/workflows/auto-commit.yml
+++ b/Downloads/random-advice-bot/.github/workflows/auto-commit.yml
@@ -1,31 +1,31 @@
-name: Auto Commit Bot 
-name: Auto Commit Bot
+name: Auto Commit
 
 on:
   schedule:
-    - cron: '5 8 * * *'    # 08:05
-    - cron: '17 8 * * *'   # 08:17
-    - cron: '32 8 * * *'   # 08:32
-    - cron: '49 8 * * *'   # 08:49
+    - cron: "0 * * * *"  # Запуск каждый час
+  push:
+    branches:
+      - main
+  workflow_dispatch:
 
 jobs:
   auto-commit:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repository
+      - name: Checkout Repository
         uses: actions/checkout@v4
 
       - name: Set up Git
         run: |
-          git config --global user.name "Vita689479"
-          git config --global user.email "vita.birda@gmail.com"
+          git config --global user.name "github-actions[bot]"
+          git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
 
       - name: Make changes
-        run: echo "Last commit: $(date)" >> activity_log.txt
+        run: echo "Авто-коммит $(date)" >> auto_commit_log.txt
 
-      - name: Commit and push
+      - name: Commit and Push
         run: |
-          git add activity_log.txt
-          git commit -m "Automated commit at $(date)"
+          git add auto_commit_log.txt
+          git commit -m "Auto commit at $(date)" || echo "No changes to commit"
           git push
