--- a/.github/workflows/auto-activity.yml
+++ b/.github/workflows/auto-activity.yml
@@ -19,11 +19,10 @@ jobs:
         with:
           persist-credentials: false
 
-      -      - name: Set Git identity
+      - name: Set Git identity
         run: |
           git config --global user.name "Vita"
           git config --global user.email "197509342+Vita689479@users.noreply.github.com"
-
 
       - name: Generate random commit
         run: |
