--- a/.github/workflows/auto-activity.yml
+++ b/.github/workflows/auto-activity.yml
@@ -4,6 +4,7 @@ on:
   schedule:
     - cron: '10 7 * * 1-5'  # Точка входа для будних дней
     - cron: '10 8 * * 6'     # Точка входа для субботы
+  workflow_dispatch:  # Для ручного запуска
 
 jobs:
   generate-activity:
@@ -36,7 +37,7 @@ jobs:
           if [ $DAY -le 5 ]; then
             RUNS=$(( (RANDOM % 4) + 2 ))  # 2-5 запусков
             START_HOUR=7
-            END_HOUR=8
+            END_HOUR=9
           else
             RUNS=$(( (RANDOM % 3) + 1 ))  # 1-3 запуска
             START_HOUR=8
@@ -53,13 +54,21 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           for ((i=1; i<=${{ steps.params.outputs.runs }}; i++)); do
-            # Генерируем случайную задержку (10-50 минут)
-            DELAY=$(( (RANDOM % 41) * 60 + 600 ))
-            echo "Запуск $i через $((DELAY / 60)) минут"
+            # Генерируем случайное время запуска в указанном диапазоне
+            HOUR=$(( (RANDOM % (${{ steps.params.outputs.end_hour }} - ${{ steps.params.outputs.start_hour }})) + ${{ steps.params.outputs.start_hour }} ))
+            MINUTE=$(( (RANDOM % 40) * 10 + 10 ))  # Минуты от 10 до 50
+            
+            # Генерируем случайную задержку до запуска
+            DELAY=$(( ( ( (HOUR - $(date +%H)) * 3600 ) + (MINUTE - $(date +%M)) * 60 ) ))
+            if [ $DELAY -lt 0 ]; then
+              DELAY=$(( DELAY + 86400 ))  # Если время уже прошло, ждем до следующего дня
+            fi
+            
+            echo "Запуск $i через $((DELAY / 3600)) часов и $(( (DELAY % 3600) / 60 )) минут"
             sleep $DELAY
 
-            # Случайный тип активности (1-5)
-            ACTIVITY_TYPE=$(( RANDOM % 5 + 1 ))
+            # Случайный тип активности (1-8)
+            ACTIVITY_TYPE=$(( RANDOM % 8 + 1 ))
             
             # Массив случайных сообщений
             COMMIT_MESSAGES=(
@@ -68,6 +77,9 @@ jobs:
               "Исправление опечаток"
               "Рефакторинг модуля"
               "Добавление тестов"
+              "Обновление зависимостей"
+              "Улучшение производительности"
+              "Исправление ошибок"
             )
             
             ISSUE_TITLES=(
@@ -76,6 +88,9 @@ jobs:
               "Предложение фичи"
               "Вопрос по реализации"
               "Обновление зависимостей"
+              "Отчет о тестировании"
+              "Запрос на документацию"
+              "Предложение по безопасности"
             )
 
             case $ACTIVITY_TYPE in
@@ -85,9 +100,10 @@ jobs:
                 echo "$(date) - $MSG" >> activity.log
                 git add activity.log
                 git commit -m "$MSG (#$i)"
-                git push origin main
+                echo "Commit created and pushed."
+                git push origin main || echo "No changes to commit"
                 ;;
-
+              
               3)
                 # Создание issue
                 TITLE=${ISSUE_TITLES[$RANDOM % ${#ISSUE_TITLES[@]}]}
@@ -96,9 +112,9 @@ jobs:
                   https://api.github.com/repos/${{ github.repository }}/issues \
                   -d '{"title":"'"$TITLE"'","body":"Автоматически созданная задача"}'
                 ;;
-
+              
               4)
-                # Создание PR
+                # Pull Request
                 BRANCH_NAME="auto-changes-$(date +%s)"
                 git checkout -b $BRANCH_NAME
                 echo "Changes #$i" >> file$i.txt
@@ -111,7 +127,7 @@ jobs:
                   https://api.github.com/repos/${{ github.repository }}/pulls \
                   -d '{"title":"Автоматический PR #'"$i"'","head":"'"$BRANCH_NAME"'","base":"main"}'
                 ;;
-
+              
               5)
                 # Комментарий к issue
                 ISSUE_NUMBER=$(curl -s -H "Authorization: token $GITHUB_TOKEN" \
@@ -124,6 +140,24 @@ jobs:
                     "https://api.github.com/repos/${{ github.repository }}/issues/$ISSUE_NUMBER/comments" \
                     -d '{"body":"Автоматический комментарий (#'"$i"')"}'
                 fi
+                ;;
+              
+              6)
+                # Тестирование
+                echo "Running tests..."
+                # Добавьте команды для запуска тестов
+                ;;
+              
+              7)
+                # Деплой
+                echo "Deploying to production..."
+                # Добавьте команды для деплоя
+                ;;
+              
+              8)
+                # Обновление документации
+                echo "Updating documentation..."
+                # Добавьте команды для обновления документации
                 ;;
             esac
           done
